# evoNet

./: CMakeLists.txt  LICENSE  README.md
core/include/: core.h
core/include/filesystem/: cache.h  filesystem.h  log.h
core/include/socket/: socket.h  unix_socket.h
core/include/utils/: socket_utils.h
core/src/filesystem/: filesystem.cpp
core/src/socket/: socket.cpp  unix_socket.cpp
